--- a/web/assets/css/nosotros.css
+++ b/web/assets/css/nosotros.css
@@ -457,9 +457,15 @@ position: absolute;
 
 .container-questions {
     background: rgb(255,255,255);
-    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(224,199,229,1) 42%, rgba(231,244,255,1) 100%);
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(224,199,229,1) 0%, rgba(231,244,255,1) 100%);
     max-width: 100%;
     padding: .1rem 0 4rem 0;
+}
+
+.mision{
+    background: rgb(255,255,255) !important;
+    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(224,199,229,1) 100%,rgba(255,255,255,1) 100%) !important;
+    min-width: 100%;
 }
 
 .container-questions .row .col-md-12 {
