--- a/web/assets/css/header.css
+++ b/web/assets/css/header.css
@@ -144,6 +144,22 @@ header.btn.solid:hover {
   transform: scale(1.1);
 }
 
+.btnIni .solid{
+  transition: 0.5s;
+  -moz-transition: 0.5s; /* Firefox */
+  -webkit-transition: 0.5s; /* Chrome - Safari */
+  -o-transition: 0.5s; /* Opera */
+}
+
+.btnIni:hover,
+.solid:hover{
+  transform : scale(1.1);
+  -moz-transform : scale(1.1); /* Firefox */
+  -webkit-transform : scale(1.1); /* Chrome - Safari */
+  -o-transform : scale(1.1); /* Opera */
+  -ms-transform : scale(1.1); /* IE9 */
+}
+
 .dropdown {
   position: absolute;
   top: 100%;
