--- a/web/assets/css/home.css
+++ b/web/assets/css/home.css
@@ -7,7 +7,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Poppins:wght@400;700&family=Work+Sans&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600;700;800&display=swap');
 
-
 /* PANEL */
 
 .div-container-panel {
@@ -66,7 +65,7 @@
 .image-panel {
     position: absolute;
     width: 700px;
-    bottom: -208px;
+    bottom: 0;
     right: 0;
 }
 
