--- a/web/assets/css/nosotros.css
+++ b/web/assets/css/nosotros.css
@@ -74,14 +74,18 @@
     margin: auto 0;
 }
 
- /*.image-panel {
-bottom: 0;
-position: absolute; 
-}*/
+/*  .img-fluid {
+    position: absolute;
+    width: 700px;
+    bottom: 0;
+    right: 0;
+    margin-top: 70px;
+} */
 
-.container-panel-image-nosotros img {
+.panel{
     width: 660px;
     margin-bottom: 1.6rem;
+
 }
 
 
